Refactor code comments and execution counts across multiple notebooks
- Updated comments for clarity and consistency in 1_data_features.ipynb, 2_SVC_model.ipynb, 2_linear_model.ipynb, 2_logistic_model.ipynb, and 2_randomforest_model.ipynb.
- Set execution counts to null for all code cells to reset notebook state.
- Improved descriptions for feature selection and performance evaluation sections.
- Added blank lines for better readability in various code sections.

--- a/1_data_features.ipynb
+++ b/1_data_features.ipynb
@@ -35,12 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cdaa0065",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_raw['^VIX'] = data_raw['^VIX'] / np.sqrt(252) / 100  # Convert VIX to daily volatility"
+    "# Convert VIX to daily volatility\n",
+    "data_raw['^VIX'] = data_raw['^VIX'] / np.sqrt(252) / 100"
    ]
   },
   {
@@ -56,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "451371fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Signal trigger\n",
+    "# Signal trigger (adjustable and may have an impact on model performance, a parameter to fine-tune later if futher investigation is needed)\n",
     "Trigger_up = 0.005\n",
     "Trigger_down = -0.005\n",
     "\n",
@@ -85,7 +86,7 @@
     "    day_to_day_return = close.pct_change()\n",
     "    signal = np.where(day_to_day_return > Trigger_up, 1, np.where(day_to_day_return < Trigger_down, -1, 0))\n",
     "    \n",
-    "    # Store in dict with multi-index key\n",
+    "    # Store in dict data\n",
     "    data[(ticker, 'Stochastic')] = stochastic\n",
     "    data[(ticker, 'William')] = william\n",
     "    data[(ticker, 'Basic_Mid')] = basic_mid\n",
@@ -93,7 +94,7 @@
     "    data[(ticker, 'Close_to_Low')] = close_to_low\n",
     "    data[(ticker, 'DD_Return')] = day_to_day_return\n",
     "    \n",
-    "    # Moving averages (N=20 and N=50 days)\n",
+    "    # Moving averages (various windows for short-term and long-term trends)\n",
     "    MA_N = [5, 10, 15, 35, 40, 45]\n",
     "    Trend_N = [50, 100, 150]\n",
     "    Series_dict = {'Close': close, 'High': high, 'Low': low}\n",
@@ -120,27 +121,27 @@
     "            data[(ticker, f'{serie}_Above_STD_{N}')] = (matrice > data[(ticker, f'{serie}_STD_{N}')]).astype(int)\n",
     "\n",
     "    for N in MA_N:\n",
-    "        # Correlation with VIX\n",
+    "        # Correlation with VIX on short-term windows\n",
     "        data[(ticker, f'Close_CORR_{N}')] = data[(ticker, f'Close_STD_{N}')].rolling(window=N).corr(data_raw[('^VIX', 'Close')].rolling(window=N).mean())\n",
     "        \n",
     "\n",
-    "    #adding lagged features\n",
+    "    # Adding lagged features for basic indicators\n",
     "    lag_days = [1,2,3,4,5]\n",
     "    feature_names = ['Stochastic', 'William', 'Basic_Mid', 'Close_to_High', 'Close_to_Low', 'DD_Return']\n",
     "    for feature in feature_names:\n",
     "        for lag in lag_days:\n",
     "            data[(ticker, f'{feature}_lag_{lag}')] = data[(ticker, feature)].shift(lag)\n",
     "\n",
-    "    #Target signal to predict\n",
+    "    # Target signal to predict\n",
     "    data[(ticker, 'Signal')] = signal\n",
     "    shifted_signal = np.empty_like(signal)\n",
-    "    shifted_signal[:-1] = signal[1:]      # shift by -1\n",
-    "    shifted_signal[-1] = 0                # fill the gap with 0  # Shift signal to align with next day's return\n",
+    "    shifted_signal[:-1] = signal[1:]      # shift by -1 (predict now the next day's dynamic)\n",
+    "    shifted_signal[-1] = 0                # fill the gap with 0\n",
     "\n",
-    "# Create a DataFrame from the collected data\n",
+    "# Create a DataFrame from the created data\n",
     "new_columns_df = pd.DataFrame(data)\n",
     "\n",
-    "# Concatenate with data_features to avoid fragmentation\n",
+    "# Concatenate new features to original features\n",
     "data_features = pd.concat([data_features, new_columns_df], axis=1)"
    ]
   },
