--- a/2_SVC_model.ipynb
+++ b/2_SVC_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bb01be35",
    "metadata": {},
    "outputs": [
@@ -299,6 +299,7 @@
    "source": [
     "# Load processed data features\n",
     "data_features = pd.read_csv('processed_data/data_features.csv', header=[0,1], index_col=0, parse_dates=True)\n",
+    "\n",
     "# Forward fill missing values\n",
     "data_features = data_features.ffill()\n",
     "\n",
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "337a25bd",
    "metadata": {},
    "outputs": [
@@ -584,7 +585,7 @@
     }
    ],
    "source": [
-    "# find best features using SelectKBest on every ticker and keep most frequent features\n",
+    "# Find best features using SelectKBest on every ticker and keep most frequent features\n",
     "\n",
     "most_frequent_features = []\n",
     "k_best_features = 70\n",
@@ -1080,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2732c606",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1696,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_raw = metrics_perf_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
@@ -2369,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "adaf45d6",
    "metadata": {},
    "outputs": [
@@ -2776,6 +2777,8 @@
     "        # Define performance metrics (model returns based on triggers)\n",
     "        Y_train_pred = np.where(Y_train_pred_src > best_trigger_up, 1, np.where(Y_train_pred_src < best_trigger_down, -1, 0))\n",
     "        Y_test_pred = np.where(Y_test_pred_src > best_trigger_up, 1, np.where(Y_test_pred_src < best_trigger_down, -1, 0))\n",
+    "\n",
+    "        # Inverted signals\n",
     "        #Y_train_pred = np.where(Y_train_pred_src > best_trigger_up, -1, np.where(Y_train_pred_src < best_trigger_down, 1, 0))\n",
     "        #Y_test_pred = np.where(Y_test_pred_src > best_trigger_up, -1, np.where(Y_test_pred_src < best_trigger_down, 1, 0))\n",
     "        \n",
@@ -2817,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "4654d5e9",
    "metadata": {},
    "outputs": [
@@ -3432,7 +3435,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_selected = metrics_perf_selected_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
