--- a/2_linear_model.ipynb
+++ b/2_linear_model.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cd35791a",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "# find best features using SelectKBest on every ticker and keep most frequent features\n",
+    "# Find best features using SelectKBest on every ticker and keep most frequent features\n",
     "\n",
     "most_frequent_features = []\n",
     "k_best_features = 70\n",
@@ -594,13 +594,15 @@
     "    X = filtered_data[ticker].drop(columns=['Signal'])\n",
     "    Y = filtered_data[ticker]['Signal']\n",
     "    \n",
+    "    # Remove columns with very low variance\n",
     "    selector_var = VarianceThreshold(threshold=0.01)\n",
     "    X_var = selector_var.fit_transform(X)\n",
-    "    selector = SelectKBest(score_func=f_classif, k=k_best_features)\n",
+    "    selector = SelectKBest(score_func=f_classif, k=k_best_features) # May produce warning if k_best_features > number of remaining features\n",
     "    selector.fit(X_var, Y)\n",
     "    \n",
     "    selected_features = X.columns[selector.get_support(indices=True)].tolist()\n",
-    "    # Ensure required_col is included\n",
+    "\n",
+    "    # Ensure required_col is included (only \"DD_Return\" and allow to compute yield during performance evaluation)\n",
     "    if required_col not in selected_features:\n",
     "        selected_features.append(required_col)\n",
     "    \n",
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f67c10de",
    "metadata": {},
    "outputs": [
@@ -964,7 +966,7 @@
    "source": [
     "# Fit model and parameters for each period and ticker\n",
     "\n",
-    "duration_period = 1/2 # % year\n",
+    "duration_period = 1/2 # in % year\n",
     "window_size = int(252 * duration_period)\n",
     "trigger_up_grid = np.linspace(0.00, 5, 10)\n",
     "trigger_down_grid = np.linspace(0.00, -5, 10)\n",
@@ -1053,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f71b9005",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1670,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_raw = metrics_perf_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
@@ -1765,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ddf44a62",
    "metadata": {},
    "outputs": [
@@ -2254,7 +2256,7 @@
     }
    ],
    "source": [
-    "#PNL_data.set_index('Start', inplace=True)\n",
+    "# PNL_data.set_index('Start', inplace=True)\n",
     "linewidth_market = 4\n",
     "linewidth_model = 2\n",
     "plt.figure(figsize=(20, 13))\n",
@@ -2342,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6d82faac",
    "metadata": {},
    "outputs": [
@@ -2735,6 +2737,8 @@
     "        # Define performance metrics (model returns based on triggers)\n",
     "        Y_train_pred = np.where(Y_train_pred_src > best_trigger_up, 1, np.where(Y_train_pred_src < best_trigger_down, -1, 0))\n",
     "        Y_test_pred = np.where(Y_test_pred_src > best_trigger_up, 1, np.where(Y_test_pred_src < best_trigger_down, -1, 0))\n",
+    "\n",
+    "        # Inverted signals (produce positive results but not coherent with training period)\n",
     "        #Y_train_pred = np.where(Y_train_pred_src > best_trigger_up, -1, np.where(Y_train_pred_src < best_trigger_down, 1, 0))\n",
     "        #Y_test_pred = np.where(Y_test_pred_src > best_trigger_up, -1, np.where(Y_test_pred_src < best_trigger_down, 1, 0))\n",
     "        \n",
@@ -2776,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2dcd9656",
    "metadata": {},
    "outputs": [
@@ -3391,7 +3395,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_selected = metrics_perf_selected_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
