--- a/2_logistic_model.ipynb
+++ b/2_logistic_model.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "26cd0110",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "# find best features using SelectKBest on every ticker and keep most frequent features\n",
+    "# Find best features using SelectKBest on every ticker and keep most frequent features\n",
     "\n",
     "most_frequent_features = []\n",
     "k_best_features = 70\n",
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2732c606",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1657,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_raw = metrics_perf_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b6ccb755",
    "metadata": {},
    "outputs": [
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "4654d5e9",
    "metadata": {},
    "outputs": [
@@ -3353,7 +3353,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_selected = metrics_perf_selected_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
@@ -3967,7 +3967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "f8f2b939",
    "metadata": {},
    "outputs": [
@@ -3986,6 +3986,8 @@
     "# Compare PNL data between raw and selected tickers\n",
     "\n",
     "plt.figure(figsize=(20, 13))\n",
+    "\n",
+    "# Showing Market Return affecting lisibility of model performance\n",
     "\n",
     "plt.plot(PNL_data.set_index('Start').index, PNL_data['Return_Predicted_Test'], label='Selected Tickers - Model performance', linewidth=linewidth_model, color='coral')\n",
     "#plt.plot(data_plot.index, data_plot['Market_Return_Test'], label='Selected Tickers - Market performance', linewidth=linewidth_market, color='darkred')\n",
