--- a/2_randomforest_model.ipynb
+++ b/2_randomforest_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bb01be35",
    "metadata": {},
    "outputs": [
@@ -299,6 +299,7 @@
    "source": [
     "# Load processed data features\n",
     "data_features = pd.read_csv('processed_data/data_features.csv', header=[0,1], index_col=0, parse_dates=True)\n",
+    "\n",
     "# Forward fill missing values\n",
     "data_features = data_features.ffill()\n",
     "\n",
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "65ec1130",
    "metadata": {},
    "outputs": [
@@ -326,7 +327,6 @@
     "# Filter data_features to include only rows after the date N due to feature availability\n",
     "N = 151\n",
     "filtered_data = data_features[data_features.index > data_features.index[N]]\n",
-    "#filtered_data = filtered_data[filtered_data.index < filtered_data.index[(252*4)]]\n",
     "first_date = filtered_data.index.min()\n",
     "last_date = filtered_data.index.max()\n",
     "print(f'Data filtered to include only rows after {first_date}')\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "352cfa48",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
     }
    ],
    "source": [
-    "# find best features using SelectKBest on every ticker and keep most frequent features\n",
+    "# Find best features using SelectKBest on every ticker and keep most frequent features\n",
     "\n",
     "most_frequent_features = []\n",
     "k_best_features = 70\n",
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2732c606",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
     }
    ],
    "source": [
-    "# lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
+    "# Lets compute the average Return_Predicted_Train and Return_Predicted_Test for Train Start dates batch\n",
     "summary_graph_raw = metrics_perf_df.groupby(['Train Start', 'Train End', 'Test Start', 'Test End']).agg({\n",
     "    'Return_Predicted_Train': 'mean',\n",
     "    'Market_Return_Train': 'mean',\n",
