Refactor neural network model implementation and remove unused code cells for improved clarity and performance

--- a/GABRIEL/THE GAB MODEL 1.ipynb
+++ b/GABRIEL/THE GAB MODEL 1.ipynb
@@ -317,27 +317,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "d95cc02b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "192"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 139,
    "id": "29a4d152",
    "metadata": {},
@@ -404,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "5c1b4c32",
    "metadata": {},
    "outputs": [
@@ -420,27 +399,176 @@
     "result = model.predict(X_validation).round()\n",
     "save = {}\n",
     "for i in range(1, len(Y_validation)):\n",
-    "    save[Y_validation.index[i]] = accuracy_score(Y_validation.iloc[i].tolist(), result[i])"
+    "    save[Y_validation.index[i]] = accuracy_score(Y_validation.iloc[i].tolist(), result[i])\n",
+    "\n",
+    "mean = np.mean(list(save.values()))\n",
+    "mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "7929e15a",
+   "execution_count": 152,
+   "id": "422ac59e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Application of neural network model on full data with all selected features\n",
+    "\n",
+    "X_full = pd.DataFrame()\n",
+    "Y_full = pd.DataFrame()\n",
+    "for symbol in symbol_list:\n",
+    "    X_symbol = data_selected_features[symbol].drop(columns=['Day_yield'])\n",
+    "    y_symbol = (data_selected_features[symbol]['Day_yield'].shift(-1) > 0).astype(int)\n",
+    "    \n",
+    "    X_symbol.columns = pd.MultiIndex.from_tuples([(symbol, col) for col in X_symbol.columns])\n",
+    "    X_full = pd.concat([X_full, X_symbol], axis=1)\n",
+    "    Y_full = pd.concat([Y_full, y_symbol.rename(symbol)], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "0e0c906d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Flat X with symbols as prefix in column names\n",
+    "X_full_flat = pd.DataFrame()\n",
+    "for symbol in symbol_list:\n",
+    "    X_symbol = X_full[symbol]\n",
+    "    X_symbol.columns = [f'{symbol}_{col}' for col in X_symbol.columns]\n",
+    "    X_full_flat = pd.concat([X_full_flat, X_symbol], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "eb58d46a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = sorted(X_full_flat.index)\n",
+    "end_train_date = dates[int(len(dates)*0.6)]\n",
+    "end_test_date = dates[int(len(dates)*0.8)] \n",
+    "\n",
+    "X_train = X_full_flat[X_full_flat.index <= end_train_date]\n",
+    "Y_train = Y_full[Y_full.index <= end_train_date]\n",
+    "\n",
+    "# Standardize features\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "X_train = pd.DataFrame(scaler.transform(X_train), index=X_train.index, columns=X_train.columns)\n",
+    "\n",
+    "X_test = X_full_flat[X_full_flat.index > end_train_date]\n",
+    "Y_test = Y_full[Y_full.index > end_train_date]\n",
+    "X_test = X_test[X_test.index <= end_test_date]\n",
+    "Y_test = Y_test[Y_test.index <= end_test_date]\n",
+    "\n",
+    "X_test = pd.DataFrame(scaler.transform(X_test), index=X_test.index, columns=X_test.columns)\n",
+    "\n",
+    "X_validation = X_full_flat[X_full_flat.index > end_test_date]\n",
+    "Y_validation = Y_full[Y_full.index > end_test_date]\n",
+    "\n",
+    "X_validation = pd.DataFrame(scaler.transform(X_validation), index=X_validation.index, columns=X_validation.columns) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "f25a2ae2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 5ms/step - accuracy: 0.0010 - loss: 0.6717 - val_accuracy: 0.0000e+00 - val_loss: 0.6781\n",
+      "Epoch 2/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 5ms/step - accuracy: 0.0000e+00 - loss: 0.6693 - val_accuracy: 0.0000e+00 - val_loss: 0.6785\n",
+      "Epoch 3/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6690 - val_accuracy: 0.0000e+00 - val_loss: 0.6781\n",
+      "Epoch 4/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6684 - val_accuracy: 0.0000e+00 - val_loss: 0.6773\n",
+      "Epoch 5/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6680 - val_accuracy: 0.0000e+00 - val_loss: 0.6774\n",
+      "Epoch 6/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6676 - val_accuracy: 0.0000e+00 - val_loss: 0.6771\n",
+      "Epoch 7/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6673 - val_accuracy: 0.0000e+00 - val_loss: 0.6774\n",
+      "Epoch 8/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6668 - val_accuracy: 0.0000e+00 - val_loss: 0.6778\n",
+      "Epoch 9/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 6ms/step - accuracy: 6.7590e-04 - loss: 0.6666 - val_accuracy: 0.0000e+00 - val_loss: 0.6773\n",
+      "Epoch 10/10\n",
+      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6667 - val_accuracy: 0.0000e+00 - val_loss: 0.6771\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "np.float64(0.5483343908629441)"
+       "<keras.src.callbacks.history.History at 0x17b04925e90>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Try a neural network model with TensorFlow\n",
+    "\n",
+    "model_full = models.Sequential([\n",
+    "    layers.Input(shape=(X_train.shape[1],)),\n",
+    "    layers.Dense(128, activation='relu'),\n",
+    "    layers.Dense(128, activation='relu'),\n",
+    "    layers.Dense(64, activation='sigmoid'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(32, activation='sigmoid'),\n",
+    "    layers.Dense(32, activation='relu'),\n",
+    "    layers.Dense(32, activation='relu'),\n",
+    "    layers.Dense(16, activation='sigmoid'),\n",
+    "    layers.Dense(16, activation='relu'),\n",
+    "    layers.Dense(16, activation='relu'),\n",
+    "    layers.Dense(Y_train.shape[1], activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model_full.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "model_full.fit(X_train, Y_train, epochs=10, batch_size=1, validation_data=(X_test, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "16f3fa8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5403870558375634)"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = model_full.predict(X_validation).round()\n",
+    "save = {}\n",
+    "for i in range(1, len(Y_validation)):\n",
+    "    save[Y_validation.index[i]] = accuracy_score(Y_validation.iloc[i].tolist(), result[i])\n",
+    "\n",
     "mean = np.mean(list(save.values()))\n",
     "mean"
    ]
